--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - nonleague.web</title>
+        <title>@ViewData["Title"]</title>
 
         <environment names="Development">
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">nonleague.web</a>
+                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">Non League</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                         <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,7 +40,7 @@
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; 2016 - nonleague.web</p>
+                <p>&copy; 2016 - Non League</p>
             </footer>
         </div>
 
