Add fixture and table controllers

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,12 +26,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">Non League</a>
+                    <a asp-controller="fixture" asp-action="index" class="navbar-brand"><img src="/images/Logo.png"></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
+                        <li><a asp-controller="fixture" asp-action="index">Fixtures / Results</a></li>
+                        <li><a asp-controller="table" asp-action="index">Tables</a></li>
+                        <li><a asp-controller="about" asp-action="index">About</a></li>
                     </ul>
                 </div>
             </div>
