Add season controller

--- a/Views/Fixture/Index.cshtml
+++ b/Views/Fixture/Index.cshtml
@@ -3,15 +3,4 @@
     ViewData["Title"] = "Non League";
 }
 
-<h3>@ViewData["Message"]</h3>
-
-<div class="list-group">
-@foreach(var league in Model)
-{
-  <a href="#" class="list-group-item">
-    <h4 class="list-group-item-heading">@league.Name</h4>
-    <p class="list-group-item-text">@league.Division</p>
-    <p class="list-group-item-text">@league.Sponsor</p>
-  </a>
-}    
-</div>
+<h3>Season Months</h3>
