--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,11 +26,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-controller="fixture" asp-action="index" class="navbar-brand"><img src="/images/Logo.png"></a>
+                    <a asp-controller="competition" asp-action="fixture" class="navbar-brand"><img src="/images/Logo.png"></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a asp-controller="fixture" asp-action="index">Fixtures / Results</a></li>
+                        <li><a asp-controller="competition" asp-action="fixture">Fixtures / Results</a></li>
                         <li><a asp-controller="table" asp-action="index">Tables</a></li>
                         <li><a asp-controller="about" asp-action="index">About</a></li>
                     </ul>
