More controller routing changes

--- a/Views/Fixture/Index.cshtml
+++ b/Views/Fixture/Index.cshtml
@@ -3,4 +3,6 @@
     ViewData["Title"] = "Non League";
 }
 
-<p>Fixtures / results</p>
+<h3>Fixtures / Results</h3>
+<h4>@ViewData["Heading"]</h4>
+<hr />
