--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="competition" asp-action="fixture">Fixtures / Results</a></li>
-                        <li><a asp-controller="table" asp-action="index">Tables</a></li>
+                        <li><a asp-controller="competition" asp-action="table">Tables</a></li>
                         <li><a asp-controller="about" asp-action="index">About</a></li>
                     </ul>
                 </div>
