--- a/Views/Table/Index.cshtml
+++ b/Views/Table/Index.cshtml
@@ -1,5 +1,8 @@
+@*--@model IEnumerable<nonleague.web.Entities.Month>--*@
 @{
     ViewData["Title"] = "Non League";
 }
 
-<h3>@ViewData["Message"]</h3>
+<h3>Tables</h3>
+<h4>@ViewData["Heading"]</h4>
+<hr />
