--- a/Views/Season/Index.cshtml
+++ b/Views/Season/Index.cshtml
@@ -3,12 +3,15 @@
     ViewData["Title"] = "Non League";
 }
 
+<h3>Fixtures / Results</h3>
+<h4>@ViewData["Heading"]</h4>
+<hr />
+
 <div class="list-group">
 @foreach(var month in Model)
 {
   <a asp-controller="Fixture" asp-action="Index" asp-route-monthid=@month.ID class="list-group-item">
     <h4 class="list-group-item-heading">@month.Name</h4>
-    <p class="list-group-item-text">@month.ID</p>
   </a>
 }    
 </div>
