--- a/Views/Table/Index.cshtml
+++ b/Views/Table/Index.cshtml
@@ -1,4 +1,4 @@
-@*--@model IEnumerable<nonleague.web.Entities.Month>--*@
+@model nonleague.web.Entities.LeagueTable
 @{
     ViewData["Title"] = "Non League";
 }
@@ -6,4 +6,29 @@
 <h3>Tables</h3>
 <h4>@ViewData["Heading"]</h4>
 <hr />
-<p>@ViewData["Test"]</p>
+<table class="table table-striped table-bordered table-condensed">
+    <tr>
+        <th>Pos.</th>
+        <th>Team</th>
+        <th class="text-center">P</th>
+        <th class="text-center">W</th>
+        <th class="text-center">D</th>
+        <th class="text-center">L</th>
+        <th class="text-center">GD</th>
+        <th class="text-center">Pts.</th>
+
+    </tr>
+@foreach(var team in Model.team)
+{
+    <tr>
+        <td>@team.position</td>
+        <td>@team.name</td>
+        <td class="text-center">@team.played</td>
+        <td class="text-center">@team.won</td>
+        <td class="text-center">@team.drawn</td>
+        <td class="text-center">@team.lost</td>
+        <td class="text-center">@team.goalDifference</td>
+        <td class="text-center">@team.points</td>
+    </tr>
+}
+</table>
