--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,3 +11,29 @@ body {
 .navbar-brand {
     padding: 6px 15px;
 }
+
+.right-align {
+    text-align: right;
+}
+
+.center-align {
+    text-align: center;
+}
+
+ .left_align {
+    text-align: left;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.no-gutters-horizontal {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+.no-gutters-vertical {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
