--- a/Views/Season/Index.cshtml
+++ b/Views/Season/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="list-group">
 @foreach(var month in Model)
 {
-  <a asp-controller="Fixture" asp-action="Index" asp-route-monthid=@month.ID class="list-group-item">
+  <a asp-controller="Match" asp-action="Index" asp-route-compid=@ViewData["CompID"] asp-route-monthid=@month.ID class="list-group-item">
     <h4 class="list-group-item-heading">@month.Name</h4>
   </a>
 }
