--- a/Views/Season/Index.cshtml
+++ b/Views/Season/Index.cshtml
@@ -1,4 +1,4 @@
-@model nonleague.web.Entities.LeagueSeason
+@model nonleague.web.Helper.LeagueSeasonHelper
 @{
     ViewData["Title"] = "Non League";
 }
