--- a/Views/Table/Index.cshtml
+++ b/Views/Table/Index.cshtml
@@ -1,10 +1,10 @@
-@model nonleague.web.Entities.LeagueTable
+@model nonleague.web.Helper.LeagueTableHelper
 @{
     ViewData["Title"] = "Non League";
 }
 
 <h3>Tables</h3>
-<h4>@ViewData["Heading"]</h4>
+<h4>@Model.Description</h4>
 <hr />
 <table class="table table-striped table-bordered table-condensed">
     <tr>
@@ -18,7 +18,7 @@
         <th class="text-center">Pts.</th>
 
     </tr>
-@foreach(var team in Model.Team)
+@foreach(var team in Model.LeagueTable.Team)
 {
     <tr>
         <td>@team.Position</td>
