Changes to release configuration.

--- a/Views/Competition/Match.cshtml
+++ b/Views/Competition/Match.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<nonleague.web.Entities.League>
 @{
-    ViewData["Title"] = "Non League";
+    ViewData["Title"] = "Fixture / Results - Non League";
 }
 
 <h3>Fixtures / Results</h3>
