--- a/Views/Competition/Table.cshtml
+++ b/Views/Competition/Table.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<nonleague.web.Entities.League>
 @{
-    ViewData["Title"] = "Non League";
+    ViewData["Title"] = "Tables - Non League";
 }
 
 <h3>Tables</h3>
