--- a/Views/Match/Index.cshtml
+++ b/Views/Match/Index.cshtml
@@ -1,6 +1,6 @@
 @model nonleague.web.Helper.MatchesCompetitionHelper
 @{
-    ViewData["Title"] = "Non League";
+    ViewData["Title"] = "Fixture / Results - Non League";
     string validDate = null;
 }
 
