--- a/Views/Season/Index.cshtml
+++ b/Views/Season/Index.cshtml
@@ -1,6 +1,6 @@
 @model nonleague.web.Helper.LeagueSeasonHelper
 @{
-    ViewData["Title"] = "Non League";
+    ViewData["Title"] = "Fixture / Results - Non League";
 }
 
 <h3>Fixtures / Results</h3>
