--- a/Views/Table/Index.cshtml
+++ b/Views/Table/Index.cshtml
@@ -1,6 +1,6 @@
 @model nonleague.web.Helper.LeagueTableHelper
 @{
-    ViewData["Title"] = "Non League";
+    ViewData["Title"] = "Tables - Non League";
 }
 
 <h3>Tables</h3>
